tests/neg-macros/i18677-b/Test_2.scala
import scala.language.experimental.mode

@extendFoo
class AFoo // error